force-app/main/default/objects/lin_TwilioConfig__c/lin_TwilioConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TwilioConfig</label>
</CustomObject>