force-app/main/default/objects/lin_TwilioConfig__c/fields/lin_AccountSid__c.field-meta.xml
<CustomField>
    <fullName>lin_AccountSid__c</fullName>
    <label>AccountSid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>