force-app/main/default/objects/lin_TwilioConfig__c/fields/lin_API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>lin_API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>