force-app/main/default/objects/lin_TwilioConfig__c/fields/lin_AuthToken__c.field-meta.xml
<CustomField>
    <fullName>lin_AuthToken__c</fullName>
    <label>AuthToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>