force-app/main/default/objects/lin_TwilioConfig__c/fields/lin_CEO_Number__c.field-meta.xml
<CustomField>
    <fullName>lin_CEO_Number__c</fullName>
    <label>CEO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>